[package]
name = "aglet"
version = "0.5.2"
edition = "2021"

license = "MIT"
description = "Opinionated integer-based coordinates and directions and utilities"
repository = "https://www.github.com/gamma-delta/aglet"
keywords = ["gamedev", "math"]
categories = ["game-development", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.5"

serde = { version = "1.0.145", features = ["derive"], optional = true }

[features]
default = ["serde"]

serde = ["dep:serde", "enumflags2/serde"]
